config/k8s-resources/test-pod.yaml
# Description: This file is used to create a test pod for testing the mutating admission controller
apiVersion: v1
kind: Pod
metadata:
  name: testpod2
  labels:
    name: testpod2
    scheduling: energy-aware
spec:
  containers:
  - name: test
    image: centos:7
    command:
      - /bin/bash
    args:
      - -c
      - trap "exit" TERM; while :; do sleep 1; done
    resources:
      limits:
        cpu: "1"
        memory: "1Gi"
