config/k8s-resources/mac-deploy.yaml
---
# Service to make controller accessible within cluster
apiVersion: v1
kind: Service
metadata:
  name: mutating-admission-controller
  labels:
    app: mutating-admission-controller
spec:
  publishNotReadyAddresses: true
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app: mutating-admission-controller

---
# Deployment of controller - only 1 replica
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mutating-admission-controller
  labels:
    app: mutating-admission-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mutating-admission-controller
  template:
    metadata:
      name: mutating-admission-controller
      labels:
        app: mutating-admission-controller
    spec:
      containers:
        - name: controller
        # Container pushed to local podman registry
          image: localhost/ma-controller:latest
          imagePullPolicy: Never
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 250m
              memory: 64Mi

---
# Webhook configuration to be forward submission requests upon pod creation
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-admission-controller
  labels:
    app: mutating-admission-controller
webhooks:
  - name: mutating-admission-controller.default.svc.cluster.local
    clientConfig:
      caBundle: MIIC/jCCAeagAwIBAgIBADANBgkqhkiG9w0BAQsFADAVMRMwEQYDVQQDEwprdWJlcm5ldGVzMB4XDTI0MDEyNTE1NDEyOFoXDTM0MDEyMjE1NDEyOFowFTETMBEGA1UEAxMKa3ViZXJuZXRlczCCASIwDQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEBAMM5CLbU0HpUNQabfb0hyNEiuYn7sjTKJ2azcueWtXlmmWw/Z72827O8/bU9ecz+Hz0SDM2mWhsK9mtcKZs0640G/ilanu2dq+jx9W3iczw9gxll5size75gvIjtRaeCmT1N/2QqV8n0/+C+AhKf5ZtZKfapUJGfSQc5yFlJvH+PMUN2PWwff8d1efjT+48Z/m76+wHdahb9f433Je0ri6j04FZ7nGyIidYVDaoCLpAR3En0/O24cLWrmdACHX/Rvwm3FiG54AwwIottF0jTaNMxhLkgGhkxKD5CG0fw [...]
      service:
        name: mutating-admission-controller
        namespace: default
        path: "/mutate"
        port: 443
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    sideEffects: None
    admissionReviewVersions: ["v1"]
    timeoutSeconds: 5
    reinvocationPolicy: Never
    failurePolicy: Ignore
    namespaceSelector:
      matchLabels:
        mutating-admission-controller: enabled
