config/k8s-resources/webhook-config.yaml
# Webhook configuration to be forward submission requests upon pod creation
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-admission-controller
  labels:
    app: mutating-admission-controller
webhooks:
  - name: mutating-admission-controller.default.svc.cluster.local
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvakNDQWVhZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJME1ERXlOVEUxTkRFeU9Gb1hEVE0wTURFeU1qRTFOREV5T0Zvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTU01CkNMYlUwSHBVTlFhYmZiMGh5TkVpdVluN3NqVEtKMmF6Y3VlV3RYbG1tV3cvWjcyODI3TzgvYlU5ZWN6K0h6MFMKRE0ybVdoc0s5bXRjS1pzMDY0MEcvaWxhbnUyZHErang5VzNpY3p3OWd4bGw1c2l6ZTc1Z3ZJanRSYWVDbVQxTgovMlFxVjhuMC8r [...]
      service:
        name: mutating-admission-controller
        namespace: default
        path: "/mutate"
        port: 443
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    sideEffects: None
    admissionReviewVersions: ["v1"]
    timeoutSeconds: 5
    reinvocationPolicy: Never
    failurePolicy: Fail # Set to fail for better debugging
    namespaceSelector:
      matchLabels:
        MAC: enabled
